--- a/sass/abstracts/_variables.sass
+++ b/sass/abstracts/_variables.sass
@@ -10,8 +10,15 @@ $light-color: #FFFFFF
 $font-color: #777777
 
 // Цвет тени
-$box-shadow: 0 4px 4px rgba($dark-color, 0.3)
+$box-shadow: 0 4px 4px rgba($dark-color, .3)
+$text-shadow: 0 4px 4px rgba($dark-color, .25)
 
+// Сетка
 $grid-width: 114rem
 $gutter-horizontal: 6rem
 $gutter-row-vertical: 8rem
+
+// Размеры шрифтов
+$font-size-h2: 3.6rem
+$font-size-h3: 2rem
+$font-size-paragraph: 1.6rem
