--- a/sass/base/_animation.sass
+++ b/sass/base/_animation.sass
@@ -31,3 +31,9 @@
   100%
     transform: translateY(0)
     opacity: 1
+
+@keyframes btnAnimationLink 
+  0%
+    height: 0
+  100%
+    height: 100%
