--- a/sass/base/_base.sass
+++ b/sass/base/_base.sass
@@ -11,13 +11,10 @@ html
 body
   margin: 0
   padding: 0
-  font-family: "Roboto", sans-serif
-  font-size: 1.6rem
-  font-weight: 400
   background-color: #F7F7F7
-  color: $font-color
 
 .container
   margin: 0 auto
+  width: 100%
   max-width: $grid-width
   
