--- a/sass/main.sass
+++ b/sass/main.sass
@@ -11,5 +11,8 @@
 @import "layout/_header"
 
 @import "components/_button"
+@import "components/_button-link"
+@import "components/_composition"
+@import "components/_adventure-card"
 
 @import "pages/_home"
