--- a/sass/abstracts/_variables.sass
+++ b/sass/abstracts/_variables.sass
@@ -6,8 +6,12 @@ $base-light-color: #BA8554
 $dark-color: #000000
 $light-color: #FFFFFF
 
-// Цвет шрифта
+// Градиент для фона
+$bg-gradient: linear-gradient(90deg, rgba($base-light-color, 0.7) 4%, rgba($dark-color, 0.7) 100%)
+
+// Цвета шрифта
 $font-color: #777777
+$font-gradient: linear-gradient(90deg, $base-light-color 4%, $base-dark-color)
 
 // Цвет тени
 $box-shadow: 0 4px 4px rgba($dark-color, .3)
