--- a/sass/components/_adventure-card.sass
+++ b/sass/components/_adventure-card.sass
@@ -10,6 +10,6 @@
   &__icon
     display: inline-block
     font-size: 6rem
-    background: linear-gradient(90deg, rgba($base-light-color, 0.7) 0%, rgba($base-dark-color, 0.7) 100%)
+    background: $font-gradient
     -webkit-background-clip: text
     color: transparent
