--- a/sass/layout/_header.sass
+++ b/sass/layout/_header.sass
@@ -1,5 +1,5 @@
 .header
-  background: linear-gradient(90deg, rgba($base-light-color, 0.7) 0%, rgba($dark-color, 0.7) 100%), url(../img/header-bg.jpg) center/cover no-repeat
+  background: $bg-gradient, url(../img/header-bg.jpg) center/cover no-repeat
   height: 100vh
   clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 85%)
   padding: 5rem
