--- a/sass/main.sass
+++ b/sass/main.sass
@@ -14,5 +14,9 @@
 @import "components/_button-link"
 @import "components/_composition"
 @import "components/_adventure-card"
+@import "components/_tour-card"
+@import "components/_feedback-card"
+@import "components/_bg-video"
+@import "components/_form-booking"
 
 @import "pages/_home"
