--- a/sass/pages/_home.sass
+++ b/sass/pages/_home.sass
@@ -3,5 +3,16 @@
 
 .section-adventure
   padding: 23rem 0
-  background: linear-gradient(90deg, rgba($base-light-color, 0.7) 0%, rgba($dark-color, 0.7) 100%), url(../../img/adventure-bg.jpeg) center/cover no-repeat
+  background: $bg-gradient, url(../../img/adventure-bg.jpeg) center/cover no-repeat
   clip-path: polygon(0% 0%, 100% 15%, 100% 100%, 0% 85%)
+
+.section-tour
+  padding: 8rem 0
+
+.section-feedback
+  padding: 8rem 0
+  position: relative
+
+.section-booking
+  padding: 8rem 0
+  background: $font-gradient
