--- a/sass/base/_utilits.sass
+++ b/sass/base/_utilits.sass
@@ -1,6 +1,9 @@
 .text-center
   text-align: center
 
+.block-center
+  margin: 0 auto
+
 .margin-bottom-10px
   margin-bottom: 1rem
 
@@ -9,5 +12,8 @@
 
 .margin-bottom-80px
   margin-bottom: 8rem
+  
+.margin-left-20px
+  margin-left: 2rem
 
 // Потом переназвать как margin-bottom-s, margin-bottom-m и т.д.
