Добавляет секции бронирования, отзывов, карточки туров,  навигационное меню и футер

--- a/sass/components/_adventure-card.sass
+++ b/sass/components/_adventure-card.sass
@@ -11,5 +11,5 @@
     display: inline-block
     font-size: 6rem
     background: $font-gradient
-    -webkit-background-clip: text
+    background-clip: text
     color: transparent
