--- a/sass/components/_button.sass
+++ b/sass/components/_button.sass
@@ -37,9 +37,8 @@
   &_card.btn
     padding: 1.5rem 2.5rem
 
-  &, &_brown
-    background: $base-light-color
+  &_accent
     color: $light-color
+    background: $base-light-color
     &::after
-      background: $base-light-color
-    
+      background: $base-light-color 
