--- a/css/main.css
+++ b/css/main.css
@@ -170,6 +170,7 @@ body {
   background: -o-linear-gradient(left, #BA8554 4%, #A14F03);
   background: linear-gradient(90deg, #BA8554 4%, #A14F03);
   -webkit-background-clip: text;
+          background-clip: text;
   color: transparent;
   -webkit-transition: all 0.4s;
   -o-transition: all 0.4s;
@@ -278,29 +279,197 @@ body {
           clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 85%);
   padding: 5rem;
 }
-.header__nav {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  margin-bottom: 20vh;
-}
 .header__logo {
   width: 5.6rem;
   height: 7rem;
+  margin-bottom: 20vh;
 }
-.header__menu {
-  width: 7rem;
-  height: 7rem;
-  background-color: #FFFFFF;
-  border-radius: 50%;
+.header__logo a {
+  display: inline-block;
 }
 .header__box {
   text-align: center;
   width: 90%;
   margin: 0 auto;
+}
+
+.footer {
+  padding: 8rem 0;
+  background: #333333;
+  text-align: center;
+}
+.footer__logo {
+  margin-bottom: 5rem;
+  width: 12rem;
+}
+.footer__list {
+  list-style: none;
+}
+.footer__item {
+  display: inline-block;
+}
+.footer__item:not(:last-child) {
+  margin-right: 5rem;
+}
+.footer__link {
+  -webkit-transition: all 0.2s;
+  -o-transition: all 0.2s;
+  transition: all 0.2s;
+}
+.footer__link:link, .footer__link:visited {
+  display: inline-block;
+  text-transform: uppercase;
+  color: #FFFFFF;
+  background-color: transparent;
+  text-decoration: none;
+  font-weight: 300;
+  letter-spacing: 0.2rem;
+  font-size: 1.6rem;
+}
+.footer__link:hover, .footer__link:active {
+  color: #BA8554;
+  text-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
+  -webkit-transform: scale(1.1);
+      -ms-transform: scale(1.1);
+          transform: scale(1.1);
+}
+
+.navigation__toggle {
+  display: none;
+}
+.navigation__button {
+  display: inline-block;
+  width: 7rem;
+  height: 7rem;
+  border-radius: 50%;
+  background: #FFFFFF;
+  position: fixed;
+  top: 5rem;
+  right: 5rem;
+  z-index: 200;
+  text-align: center;
+  cursor: pointer;
+}
+.navigation__background {
+  width: 6rem;
+  height: 6rem;
+  border-radius: 50%;
+  background: -o-radial-gradient(#BA8554, #A14F03);
+  background: radial-gradient(#BA8554, #A14F03);
+  position: fixed;
+  top: 5.5rem;
+  right: 5.5rem;
+  z-index: 100;
+  -webkit-transition: all 0.2s ease-in;
+  -o-transition: all 0.2s ease-in;
+  transition: all 0.2s ease-in;
+}
+.navigation__nav {
+  width: 0;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  right: 0;
+  z-index: 150;
+  opacity: 0;
+  -webkit-transition: all 0.2s ease-in;
+  -o-transition: all 0.2s ease-in;
+  transition: all 0.2s ease-in;
+}
+.navigation__list {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+      -ms-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  list-style: none;
+}
+.navigation__item {
+  text-align: center;
+}
+.navigation__item:not(:last-child) {
+  margin-bottom: 5rem;
+}
+.navigation__link:link, .navigation__link:visited {
+  display: inline-block;
+  text-transform: uppercase;
+  color: #FFFFFF;
+  background-color: transparent;
+  text-decoration: none;
+  font-size: 0rem;
+  letter-spacing: 0.5rem;
+  font-weight: 300;
+  background: -o-linear-gradient(330deg, transparent 50%, #FFFFFF 50%);
+  background: linear-gradient(120deg, transparent 50%, #FFFFFF 50%);
+  background-size: 225%;
+  padding: 1rem 2rem;
+  -webkit-transition: background-position 0.3s linear, color 0.3s linear, font-size 0.2s ease-in, -webkit-transform 0.2s linear;
+  transition: background-position 0.3s linear, color 0.3s linear, font-size 0.2s ease-in, -webkit-transform 0.2s linear;
+  -o-transition: background-position 0.3s linear, color 0.3s linear, transform 0.2s linear, font-size 0.2s ease-in;
+  transition: background-position 0.3s linear, color 0.3s linear, transform 0.2s linear, font-size 0.2s ease-in;
+  transition: background-position 0.3s linear, color 0.3s linear, transform 0.2s linear, font-size 0.2s ease-in, -webkit-transform 0.2s linear;
+}
+.navigation__link:hover, .navigation__link:active {
+  background-position: 100%;
+  color: #BA8554;
+  -webkit-transform: translateX(1rem);
+      -ms-transform: translateX(1rem);
+          transform: translateX(1rem);
+}
+.navigation__toggle:checked ~ .navigation__nav {
+  width: 100%;
+  opacity: 1;
+}
+.navigation__toggle:checked ~ .navigation__nav > .navigation__list > .navigation__item > .navigation__link {
+  font-size: 4rem;
+}
+.navigation__toggle:checked ~ .navigation__background {
+  -webkit-transform: scale(100);
+      -ms-transform: scale(100);
+          transform: scale(100);
+}
+.navigation__icon {
+  position: relative;
+  margin-top: 45%;
+}
+.navigation__icon, .navigation__icon:before, .navigation__icon::after {
+  display: inline-block;
+  background: #000000;
+  width: 30px;
+  height: 2px;
+  left: 0;
+}
+.navigation__icon::before, .navigation__icon::after {
+  content: "";
+  position: absolute;
+}
+.navigation__icon::before {
+  top: -10px;
+}
+.navigation__icon::after {
+  top: 10px;
+}
+.navigation__button:hover .navigation__icon::before {
+  top: -12px;
+}
+.navigation__button:hover .navigation__icon::after {
+  top: 12px;
+}
+.navigation__toggle:checked + .navigation__button .navigation__icon {
+  background: transparent;
+}
+.navigation__toggle:checked + .navigation__button .navigation__icon::before {
+  -webkit-transform: rotate(45deg);
+      -ms-transform: rotate(45deg);
+          transform: rotate(45deg);
+  top: 0;
+}
+.navigation__toggle:checked + .navigation__button .navigation__icon::after {
+  -webkit-transform: rotate(-45deg);
+      -ms-transform: rotate(-45deg);
+          transform: rotate(-45deg);
+  top: 0;
 }
 
 .btn, .btn:link, .btn:visited {
@@ -362,11 +531,11 @@ body {
 .btn_card.btn {
   padding: 1.5rem 2.5rem;
 }
-.btn, .btn_brown {
-  background: #BA8554;
+.btn_accent {
   color: #FFFFFF;
+  background: #BA8554;
 }
-.btn::after, .btn_brown::after {
+.btn_accent::after {
   background: #BA8554;
 }
 
@@ -475,6 +644,7 @@ body {
   background: -o-linear-gradient(left, #BA8554 4%, #A14F03);
   background: linear-gradient(90deg, #BA8554 4%, #A14F03);
   -webkit-background-clip: text;
+          background-clip: text;
   color: transparent;
 }
 
@@ -731,20 +901,20 @@ body {
   letter-spacing: 0.2rem;
   color: #777777;
   font-weight: 400;
-  -webkit-transition: all 0.3s;
-  -o-transition: all 0.3s;
-  transition: all 0.3s;
+  -webkit-transition: all 0.2s;
+  -o-transition: all 0.2s;
+  transition: all 0.2s;
 }
 .form__input:-moz-placeholder-shown + .form__label {
-  visability: hidden;
+  visibility: hidden;
   opacity: 0;
 }
 .form__input:-ms-input-placeholder + .form__label {
-  visability: hidden;
+  visibility: hidden;
   opacity: 0;
 }
 .form__input:placeholder-shown + .form__label {
-  visability: hidden;
+  visibility: hidden;
   opacity: 0;
 }
 .form__group-radio {
