--- a/sass/base/_typography.sass
+++ b/sass/base/_typography.sass
@@ -31,7 +31,7 @@ body
   letter-spacing: 1rem
   font-weight: 900
   background: $font-gradient
-  -webkit-background-clip: text
+  background-clip: text
   color: transparent
   transition: all .4s
   backface-visibility: hidden
