--- a/sass/layout/_header.sass
+++ b/sass/layout/_header.sass
@@ -3,18 +3,12 @@
   height: 100vh
   clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 85%)
   padding: 5rem
-  &__nav
-    display: flex
-    justify-content: space-between
-    margin-bottom: calc(100vh / 5)
   &__logo
     width: 5.6rem
     height: 7rem
-  &__menu
-    width: 7rem
-    height: 7rem
-    background-color: $light-color
-    border-radius: 50%
+    margin-bottom: calc(100vh / 5)
+    a
+      display: inline-block
   &__box
     text-align: center
     width: 90%
