--- a/sass/main.sass
+++ b/sass/main.sass
@@ -9,6 +9,8 @@
 
 @import "layout/_grid"
 @import "layout/_header"
+@import "layout/_footer"
+@import "layout/_navigation"
 
 @import "components/_button"
 @import "components/_button-link"
