--- a/sass/components/_adventure-card.sass
+++ b/sass/components/_adventure-card.sass
@@ -5,6 +5,8 @@
   border-radius: .5rem
   transition: all .2s
   box-shadow: $box-shadow
+  @include respond(tab-land)
+    padding: 1.7rem
   &:hover
     transform: scale(1.1)
   &__icon
