--- a/css/main.css
+++ b/css/main.css
@@ -10,17 +10,31 @@
 html {
   font-size: 62.5%;
 }
+@media (max-width: 1200px) {
+  html {
+    font-size: 56.25%;
+  }
+}
+@media (max-width: 900px) {
+  html {
+    font-size: 50%;
+  }
+}
+@media (max-width: 600px) {
+  html {
+    font-size: 30%;
+  }
+}
+@media (min-width: 1800px) {
+  html {
+    font-size: 75%;
+  }
+}
 
 body {
   margin: 0;
   padding: 0;
   background-color: #F7F7F7;
-}
-
-.container {
-  margin: 0 auto;
-  width: 100%;
-  max-width: 114rem;
 }
 
 @-webkit-keyframes leftToRight {
@@ -134,6 +148,11 @@ body {
   font-weight: 400;
   color: #777777;
 }
+@media (max-width: 1200px) {
+  body {
+    font-size: 1.4rem;
+  }
+}
 
 .title-first {
   color: #FFFFFF;
@@ -149,6 +168,11 @@ body {
   -webkit-animation: leftToRight 2s ease-in 0.5s;
           animation: leftToRight 2s ease-in 0.5s;
 }
+@media (max-width: 1200px) {
+  .title-first__main {
+    font-size: 4rem;
+  }
+}
 .title-first__subtitle {
   display: block;
   text-transform: lowercase;
@@ -159,6 +183,11 @@ body {
   -webkit-animation: rightToLeft 2s ease-in 0.5s;
           animation: rightToLeft 2s ease-in 0.5s;
   margin-bottom: 5rem;
+}
+@media (max-width: 1200px) {
+  .title-first__subtitle {
+    font-size: 3.2rem;
+  }
 }
 
 .title-secondary {
@@ -179,6 +208,11 @@ body {
           backface-visibility: hidden;
   text-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
 }
+@media (max-width: 1200px) {
+  .title-secondary {
+    font-size: 3rem;
+  }
+}
 .title-secondary:hover {
   text-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
   -webkit-transform: scale(1.04);
@@ -196,12 +230,23 @@ body {
   font-weight: 700;
   text-transform: uppercase;
 }
+@media (max-width: 1200px) {
+  .title-third {
+    font-size: 1.7rem;
+  }
+}
 
 .paragraph {
   font-size: 1.6rem;
   line-height: 140%;
   letter-spacing: 0.2rem;
   font-weight: 400;
+  overflow-wrap: break-word;
+}
+@media (max-width: 1200px) {
+  .paragraph {
+    font-size: 1.4rem;
+  }
 }
 
 .text-center {
@@ -235,7 +280,12 @@ body {
 .row::after {
   content: "";
   display: table;
-  clear: left;
+  clear: both;
+}
+@media (max-width: 1200px) {
+  .row {
+    max-width: 90rem;
+  }
 }
 
 .col-1-of-2 {
@@ -245,9 +295,19 @@ body {
 .col-1-of-3 {
   width: calc((100% - 6rem * 2) / 3);
 }
+@media (max-width: 1200px) {
+  .col-1-of-3 {
+    width: calc((100% - 2rem * 2) / 3);
+  }
+}
 
 .col-1-of-4 {
   width: calc((100% - 6rem * 3) / 4);
+}
+@media (max-width: 1200px) {
+  .col-1-of-4 {
+    width: calc((100% - 2rem * 3) / 4);
+  }
 }
 
 .col-2-of-3 {
@@ -269,6 +329,11 @@ body {
   margin-right: 6rem;
   margin-bottom: 8rem;
 }
+@media (max-width: 1200px) {
+  [class^=col-]:not(:last-child) {
+    margin-right: 2rem;
+  }
+}
 
 .header {
   background: -webkit-gradient(linear, left top, right top, color-stop(4%, rgba(186, 133, 84, 0.7)), to(rgba(0, 0, 0, 0.7))), url(../img/header-bg.jpg) center/cover no-repeat;
@@ -277,12 +342,12 @@ body {
   height: 100vh;
   -webkit-clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 85%);
           clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 85%);
-  padding: 5rem;
+  padding: 5rem 5rem 8rem;
 }
 .header__logo {
   width: 5.6rem;
   height: 7rem;
-  margin-bottom: 20vh;
+  margin-bottom: 16.6666666667vh;
 }
 .header__logo a {
   display: inline-block;
@@ -310,6 +375,11 @@ body {
 }
 .footer__item:not(:last-child) {
   margin-right: 5rem;
+}
+@media (max-width: 1200px) {
+  .footer__item:not(:last-child) {
+    margin-right: 4rem;
+  }
 }
 .footer__link {
   -webkit-transition: all 0.2s;
@@ -391,6 +461,11 @@ body {
 .navigation__item:not(:last-child) {
   margin-bottom: 5rem;
 }
+@media (max-width: 1200px) {
+  .navigation__item:not(:last-child) {
+    margin-bottom: 4rem;
+  }
+}
 .navigation__link:link, .navigation__link:visited {
   display: inline-block;
   text-transform: uppercase;
@@ -424,6 +499,11 @@ body {
 .navigation__toggle:checked ~ .navigation__nav > .navigation__list > .navigation__item > .navigation__link {
   font-size: 4rem;
 }
+@media (max-width: 1200px) {
+  .navigation__toggle:checked ~ .navigation__nav > .navigation__list > .navigation__item > .navigation__link {
+    font-size: 3rem;
+  }
+}
 .navigation__toggle:checked ~ .navigation__background {
   -webkit-transform: scale(100);
       -ms-transform: scale(100);
@@ -431,13 +511,13 @@ body {
 }
 .navigation__icon {
   position: relative;
-  margin-top: 45%;
+  margin-top: 48%;
 }
 .navigation__icon, .navigation__icon:before, .navigation__icon::after {
   display: inline-block;
   background: #000000;
-  width: 30px;
-  height: 2px;
+  width: 3rem;
+  height: 0.2rem;
   left: 0;
 }
 .navigation__icon::before, .navigation__icon::after {
@@ -445,16 +525,16 @@ body {
   position: absolute;
 }
 .navigation__icon::before {
-  top: -10px;
+  top: -1rem;
 }
 .navigation__icon::after {
-  top: 10px;
+  top: 1rem;
 }
 .navigation__button:hover .navigation__icon::before {
-  top: -12px;
+  top: -1.2rem;
 }
 .navigation__button:hover .navigation__icon::after {
-  top: 12px;
+  top: 1.2rem;
 }
 .navigation__toggle:checked + .navigation__button .navigation__icon {
   background: transparent;
@@ -489,6 +569,7 @@ body {
   transition: all 0.3s;
   position: relative;
   border: none;
+  text-align: right;
 }
 .btn:hover {
   -webkit-transform: translateY(-0.4rem);
@@ -530,6 +611,12 @@ body {
 }
 .btn_card.btn {
   padding: 1.5rem 2.5rem;
+}
+@media (max-width: 1200px) {
+  .btn_card.btn {
+    padding: 1.5rem 1.8rem;
+    font-size: 1.8rem;
+  }
 }
 .btn_accent {
   color: #FFFFFF;
@@ -603,10 +690,20 @@ body {
   right: 0;
   z-index: 1;
 }
+@media (max-width: 1200px) {
+  .composition__photo_b2 {
+    top: 6rem;
+  }
+}
 .composition__photo_b3 {
   top: 14rem;
   left: 4rem;
   z-index: 2;
+}
+@media (max-width: 1200px) {
+  .composition__photo_b3 {
+    top: 11rem;
+  }
 }
 .composition__photo:hover {
   -webkit-transform: scale(1.2);
@@ -631,6 +728,11 @@ body {
   transition: all 0.2s;
   -webkit-box-shadow: 0 4px 4px rgba(0, 0, 0, 0.3);
           box-shadow: 0 4px 4px rgba(0, 0, 0, 0.3);
+}
+@media (max-width: 1200px) {
+  .adventure-card {
+    padding: 1.7rem;
+  }
 }
 .adventure-card:hover {
   -webkit-transform: scale(1.1);
@@ -734,7 +836,6 @@ body {
 }
 .tour-card__description {
   list-style: none;
-  font-size: 1.6rem;
   font-weight: 700;
   letter-spacing: 0.2rem;
   color: #777777;
@@ -774,6 +875,11 @@ body {
   -webkit-transform: skew(-25deg);
       -ms-transform: skew(-25deg);
           transform: skew(-25deg);
+}
+@media (max-width: 1200px) {
+  .feedback-card {
+    padding: 4rem 9rem;
+  }
 }
 .feedback-card > * {
   -webkit-transform: skew(25deg);
@@ -862,7 +968,7 @@ body {
 }
 
 .booking__form {
-  width: 55%;
+  width: 63%;
 }
 
 .form {
@@ -872,7 +978,7 @@ body {
   margin-bottom: 1.5rem;
 }
 .form__input {
-  width: 60%;
+  width: 80%;
   background: #FFFFFF;
   padding: 1.8rem 0 1.8rem 2.2rem;
   border: none;
@@ -883,6 +989,11 @@ body {
   color: #777777;
   font-weight: 400;
   caret-color: #A14F03;
+}
+@media (max-width: 1200px) {
+  .form__input {
+    font-size: 1.4rem;
+  }
 }
 .form__input:focus {
   border-bottom: 0.3rem solid #66D763;
@@ -897,10 +1008,8 @@ body {
 .form__label {
   display: block;
   padding-left: 1.5rem;
-  font-size: 1.6rem;
   letter-spacing: 0.2rem;
   color: #777777;
-  font-weight: 400;
   -webkit-transition: all 0.2s;
   -o-transition: all 0.2s;
   transition: all 0.2s;
@@ -921,12 +1030,16 @@ body {
   display: inline-block;
   letter-spacing: 0.2rem;
 }
+.form__group-radio:not(:last-child) {
+  margin-right: 2rem;
+}
 .form__input-radio {
   display: none;
 }
 .form__label-radio {
   cursor: pointer;
   position: relative;
+  display: inline-block;
 }
 .form__button-radio {
   width: 3rem;
@@ -958,11 +1071,11 @@ body {
 }
 
 .section-about {
-  padding: 8rem 0 5rem;
+  padding: 8rem 0 0;
 }
 
 .section-adventure {
-  padding: 23rem 0;
+  padding: 19rem 0 11rem;
   background: -webkit-gradient(linear, left top, right top, color-stop(4%, rgba(186, 133, 84, 0.7)), to(rgba(0, 0, 0, 0.7))), url(../../img/adventure-bg.jpeg) center/cover no-repeat;
   background: -o-linear-gradient(left, rgba(186, 133, 84, 0.7) 4%, rgba(0, 0, 0, 0.7) 100%), url(../../img/adventure-bg.jpeg) center/cover no-repeat;
   background: linear-gradient(90deg, rgba(186, 133, 84, 0.7) 4%, rgba(0, 0, 0, 0.7) 100%), url(../../img/adventure-bg.jpeg) center/cover no-repeat;
