--- a/sass/abstracts/_mixins.sass
+++ b/sass/abstracts/_mixins.sass
@@ -11,4 +11,21 @@
   &::after
     content: ""
     display: table
-    clear: left
+    clear: both
+
+@mixin respond($breakpoint)
+  @if $breakpoint == phone
+    @media (max-width: 600px)
+      @content
+  
+  @if $breakpoint == tab-port
+    @media (max-width: 900px)
+      @content
+
+  @if $breakpoint == tab-land
+    @media (max-width: 1200px)
+      @content
+
+  @if $breakpoint == large-screen
+    @media (min-width: 1800px)
+      @content
