--- a/sass/abstracts/_variables.sass
+++ b/sass/abstracts/_variables.sass
@@ -17,12 +17,23 @@ $font-gradient: linear-gradient(90deg, $base-light-color 4%, $base-dark-color)
 $box-shadow: 0 4px 4px rgba($dark-color, .3)
 $text-shadow: 0 4px 4px rgba($dark-color, .25)
 
-// Сетка
+// Сетка десктоп
 $grid-width: 114rem
 $gutter-horizontal: 6rem
 $gutter-row-vertical: 8rem
 
-// Размеры шрифтов
+// Сетка планшет
+$grid-width-tablet: 90rem
+$gutter-horizontal-tablet: 2rem
+//$gutter-row-vertical-tablet: 8rem
+
+
+// Размеры шрифтов десктоп
 $font-size-h2: 3.6rem
 $font-size-h3: 2rem
 $font-size-paragraph: 1.6rem
+
+// Размеры шрифтов планшет
+$font-size-h2-tablet: 3rem
+$font-size-h3-tablet: 1.7rem
+$font-size-paragraph-tablet: 1.4rem
