--- a/sass/base/_base.sass
+++ b/sass/base/_base.sass
@@ -7,14 +7,17 @@
 
 html
   font-size: 62.5%
+  @include respond(tab-land)
+    font-size: 56.25%
+  @include respond(tab-port)
+    font-size: 50%
+  @include respond(phone)
+    font-size: 30%
+  @include respond(large-screen)
+    font-size: 75%
 
 body
   margin: 0
   padding: 0
   background-color: #F7F7F7
-
-.container
-  margin: 0 auto
-  width: 100%
-  max-width: $grid-width
   
