--- a/sass/components/_form-booking.sass
+++ b/sass/components/_form-booking.sass
@@ -5,7 +5,7 @@
   box-shadow: $box-shadow
 
 .booking__form
-  width: 55%
+  width: 63%
   
 .form
   padding-top: 10px
@@ -13,7 +13,7 @@
     margin-bottom: 1.5rem
 
   &__input
-    width: 60%
+    width: 80%
     background: $light-color
     padding: 1.8rem 0 1.8rem 2.2rem
     border: none
@@ -24,6 +24,8 @@
     color: $font-color
     font-weight: 400
     caret-color: $base-dark-color
+    @include respond(tab-land)
+      font-size: $font-size-paragraph-tablet
     &:focus
       border-bottom: .3rem solid #66D763
       box-shadow: $box-shadow
@@ -35,10 +37,8 @@
   &__label
     display: block
     padding-left: 1.5rem
-    font-size: $font-size-paragraph
     letter-spacing: .2rem
     color: $font-color
-    font-weight: 400
     transition: all .2s
   &__input:placeholder-shown + &__label
     visibility: hidden
@@ -47,6 +47,8 @@
   &__group-radio
     display: inline-block
     letter-spacing: .2rem
+    &:not(:last-child)
+      margin-right: 2rem
 
   &__input-radio
     display: none
@@ -54,6 +56,7 @@
   &__label-radio
     cursor: pointer
     position: relative
+    display: inline-block
 
   &__button-radio
     width: 3rem
