--- a/sass/layout/_footer.sass
+++ b/sass/layout/_footer.sass
@@ -13,6 +13,8 @@
     display: inline-block
     &:not(:last-child)
         margin-right: 5rem
+        @include respond(tab-land)
+          margin-right: 4rem
 
   &__link
     transition: all .2s
