--- a/sass/layout/_header.sass
+++ b/sass/layout/_header.sass
@@ -2,11 +2,11 @@
   background: $bg-gradient, url(../img/header-bg.jpg) center/cover no-repeat
   height: 100vh
   clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 85%)
-  padding: 5rem
+  padding: 5rem 5rem 8rem
   &__logo
     width: 5.6rem
     height: 7rem
-    margin-bottom: calc(100vh / 5)
+    margin-bottom: calc(100vh / 6)
     a
       display: inline-block
   &__box
