--- a/sass/pages/_home.sass
+++ b/sass/pages/_home.sass
@@ -1,8 +1,8 @@
 .section-about
-  padding: 8rem 0 5rem
+  padding: 8rem 0 0
 
 .section-adventure
-  padding: 23rem 0
+  padding: 19rem 0 11rem
   background: $bg-gradient, url(../../img/adventure-bg.jpeg) center/cover no-repeat
   clip-path: polygon(0% 0%, 100% 15%, 100% 100%, 0% 85%)
 
